WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73030
[WK2] Layout Test http/tests/loading/307-after-303-after-post.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=73030
Summary
[WK2] Layout Test http/tests/loading/307-after-303-after-post.html is flaky
Adam Klein
Reported
2011-11-23 10:28:13 PST
It was previously marked flaky on Snow Leopard only by levin, but I'm now seeing failures on Leopard as well.
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=http%2Ftests%2Floading%2F307-after-303-after-post.html
Attachments
dirty hack
(4.50 KB, patch)
2014-12-11 16:54 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Klein
Comment 1
2011-11-23 10:41:37 PST
Committed
r101092
: <
http://trac.webkit.org/changeset/101092
>
Andrew Wilson
Comment 2
2012-07-25 14:17:44 PDT
Seeing flakiness on all platforms now.
Alexey Proskuryakov
Comment 3
2014-12-11 16:09:20 PST
I don't know what the chromium failure was, but I'm going to appropriate this bug to fix Mac flakiness.
Alexey Proskuryakov
Comment 4
2014-12-11 16:54:13 PST
Created
attachment 243162
[details]
dirty hack This fix doesn't make me happy, but it seems like it would take a large refactoring to make this cleaner. At least it seems safe.
WebKit Commit Bot
Comment 5
2014-12-12 13:40:18 PST
Comment on
attachment 243162
[details]
dirty hack Clearing flags on attachment: 243162 Committed
r177234
: <
http://trac.webkit.org/changeset/177234
>
WebKit Commit Bot
Comment 6
2014-12-12 13:40:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug