Layout Test http/tests/loading/307-after-303-after-post.html is flaky https://bugs.webkit.org/show_bug.cgi?id=73030

Reviewed by Anders Carlsson.

Source/WebKit2:

* UIProcess/WebContext.cpp:
(WebKit::WebContext::createNewWebProcess): Added a FIXME comment.
(WebKit::WebContext::setIconDatabasePath): Don't enable m_iconDatabase if the path
is empty, meaning that the database is disabled (which is not a great way to say
that, but WebKit2 icon database doesn't support enabling/disabling cleanly).
(WebKit::WebContext::iconDatabasePath): Keep it empty if it was empty.

Tools:

* WebKitTestRunner/TestController.cpp: (WTR::TestController::initialize): Set icon
database to empty to avoid having it fetch default favicons at random times.
DumpRenderTree also disables it, and also it has a way for tests to temporarily
enable it.


Canonical link: https://commits.webkit.org/157474@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177234 268f45cc-cd09-0410-ab3c-d52691b4dbfc